# drf-auth

./: README.md
drf_auth/: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
drf_auth/movies/: models.py  permissions.py  serializer.py  urls.py  views.py
drf_auth/movies/migrations/: 0001_initial.py
drf_auth/movies_project/: settings.py  urls.py
